Add shop logic to unlock equipment, testing with 3 for each equipment

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -89,7 +89,9 @@
     <Compile Include="Assets\Scripts\Map\MapGenerator.cs" />
     <Compile Include="Assets\Scripts\UI\EquipmentUI.cs" />
     <Compile Include="Assets\Scripts\UI\LevelMenu.cs" />
+    <Compile Include="Assets\Scripts\UI\MoneyUI.cs" />
     <Compile Include="Assets\Scripts\UI\ObjectInventoryUI.cs" />
+    <Compile Include="Assets\Scripts\UI\UnlockObjPopupUI.cs" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro.cginc" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Mobile Overlay.shader" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_Bitmap.shader" />
